@@ -1,5 +1,7 @@
 === SVN
 
+* Added Dataset#columns! method that always makes a roundtrip to the DB (#177).
+
 * Added new Dataset#each_page method that iterates over all pages in the result set (#175).
 
 * Added Dataset#reverse alias to Dataset#reverse_order (#174).
